[project]
name = "tooluser"
version = "0.1.1"
description = "Enable tool-use ability for any LLM model (DeepSeek V3/R1, etc.)"
authors = [
    {name = "yanli", email = "mail@yanli.one"},
]
dependencies = ["openai>=1.75.0", "jinja2>=3.1.6", "json-repair>=0.41.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true



[tool.pdm.scripts]
fix = { shell = "ruff check --fix && ruff format" }
check = { shell = 'ruff check && ruff format --check' }

[tool.ruff]
target-version = "py310"
exclude = [".venv"]
[tool.ruff.lint]
select = ["E", "F", "G", "B", "I", "SIM", "TID", "PL", "RUF"]
ignore = [
    "RUF001",  # '，' vs. ','
    "RUF003",  # Ambiguous unicode character comment
    "E501",    # Line too long
    "E402",    # Module level import not at top of file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "SIM105",  # Use `contextlib.suppress(Exception)` instead of `try`-`except`-`pass`
    "SIM102",  # Use a single `if` statement instead of nested `if` statements
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
    "logfire>=3.14.0",
]
